--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -285,6 +285,7 @@
       }
     },
     "IPTV App is a free resource for the community so any finantial support is greatly appreciated!" : {
+      "extractionState" : "stale",
       "localizations" : {
         "pt-PT" : {
           "stringUnit" : {
@@ -572,6 +573,12 @@
             "state" : "new",
             "value" : "v%1$@ · %2$@"
           }
+        },
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "v%1$@ · %2$@"
+          }
         }
       }
     },
@@ -590,7 +597,7 @@
         "pt-PT" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "AVISO: Estás prestes a apagar todas as mídias favoritas. Se apagas-te a playlist de alguma mídia, vais ter de voltar a adiciona-la para a recuperar."
+            "value" : "AVISO: Estás prestes a apagar todas as mídias favoritas. Se apagaste a playlist de alguma mídia, vais ter de voltar a adiciona-la para a recuperar."
           }
         }
       }
