--- a/IPTV App/Localizable.xcstrings
+++ b/IPTV App/Localizable.xcstrings
@@ -174,6 +174,16 @@
         }
       }
     },
+    "Customization" : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Personalização"
+          }
+        }
+      }
+    },
     "Default" : {
       "localizations" : {
         "pt-PT" : {
@@ -190,6 +200,26 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Apagar"
+          }
+        }
+      }
+    },
+    "Delete \"%@\"" : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Apagar “%@”"
+          }
+        }
+      }
+    },
+    "Delete \"%@\"?" : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Apagar “%@”?"
           }
         }
       }
@@ -250,6 +280,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Editar Playlist"
+          }
+        }
+      }
+    },
+    "Edit Playlists" : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Editar Playlists"
           }
         }
       }
@@ -367,6 +407,16 @@
         }
       }
     },
+    "From %@" : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "De %@"
+          }
+        }
+      }
+    },
     "Get Started" : {
       "localizations" : {
         "pt-PT" : {
@@ -439,12 +489,12 @@
         }
       }
     },
-    "https://www.github.com/pedrodsac/" : {
+    "https://www.github.com/app-iptv/" : {
       "localizations" : {
         "pt-PT" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "https://www.github.com/pedrodsac/"
+            "value" : "https://www.github.com/app-iptv/"
           }
         }
       }
@@ -455,6 +505,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Sincronizado com iCloud"
+          }
+        }
+      }
+    },
+    "Import from File" : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Importar de um Ficheiro"
           }
         }
       }
@@ -602,6 +662,16 @@
         }
       }
     },
+    "No Playlist" : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Playlist Ausente"
+          }
+        }
+      }
+    },
     "No Playlists" : {
       "localizations" : {
         "pt-PT" : {
@@ -659,6 +729,26 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Abrir"
+          }
+        }
+      }
+    },
+    "or" : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ou"
+          }
+        }
+      }
+    },
+    "Playlist EPG" : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "EPG da Playlist"
           }
         }
       }
@@ -769,6 +859,26 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Pesquisar Favoritos"
+          }
+        }
+      }
+    },
+    "Select a playlist to view its medias." : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Selecione uma playlist para ver as suas mídias."
+          }
+        }
+      }
+    },
+    "Select EPG" : {
+      "localizations" : {
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Selecionar EPG"
           }
         }
       }
