Perfected the file upload method of adding playlists, fixed a lot of shit

--- a/IPTV App/Localizable.xcstrings
+++ b/IPTV App/Localizable.xcstrings
@@ -95,6 +95,7 @@
       }
     },
     "Adding playlist..." : {
+      "extractionState" : "stale",
       "localizations" : {
         "pt-PT" : {
           "stringUnit" : {
@@ -406,6 +407,9 @@
           }
         }
       }
+    },
+    "FILE ADDED" : {
+
     },
     "From %@" : {
       "localizations" : {
